Completion of first use-cases. Includes functional login, and database storage of basic user data.

--- a/Prosjekt-kopi/HHR/GoogleService-Info.plist
+++ b/Prosjekt-kopi/HHR/GoogleService-Info.plist
@@ -23,15 +23,15 @@
 	<key>STORAGE_BUCKET</key>
 	<string>skillseed-66427.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_ANALYTICS_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_APPINVITE_ENABLED</key>
-	<false></false>
+	<false/>
 	<key>IS_GCM_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>IS_SIGNIN_ENABLED</key>
-	<true></true>
+	<true/>
 	<key>GOOGLE_APP_ID</key>
 	<string>1:1050578403841:ios:27e9e92dc1a7f62c</string>
 	<key>DATABASE_URL</key>
