--- a/Prosjekt-kopi/Podfile
+++ b/Prosjekt-kopi/Podfile
@@ -11,4 +11,9 @@ pod 'Firebase/Core'
 pod 'Firebase/Auth'
 pod 'Firebase/Database'
 pod 'GeoFire', :git => 'https://github.com/firebase/geofire-objc.git'
+pod 'Firebase/Storage'
+pod 'FBSDKLoginKit'
+pod 'FBSDKCoreKit'
+pod 'FBSDKShareKit'
+
 end
