--- a/Prosjekt-kopi/Podfile
+++ b/Prosjekt-kopi/Podfile
@@ -10,10 +10,10 @@ target 'HHR' do
 pod 'Firebase/Core'
 pod 'Firebase/Auth'
 pod 'Firebase/Database'
-pod 'GeoFire', :git => 'https://github.com/firebase/geofire-objc.git'
 pod 'Firebase/Storage'
 pod 'FBSDKLoginKit'
 pod 'FBSDKCoreKit'
 pod 'FBSDKShareKit'
+pod 'GeoFire'
 
 end
